--- a/Resources/Node.js/package.json
+++ b/Resources/Node.js/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
+  "main": "app.js",
   "dependencies": {
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
