--- a/Resources/Node.js/package.json
+++ b/Resources/Node.js/package.json
@@ -7,13 +7,14 @@
   },
   "main": "app.js",
   "dependencies": {
+    "angular": "^1.4.2",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
+    "mongoskin": "~1.4",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1",
-    "mongoskin":"~1.4"
+    "serve-favicon": "~2.2.1"
   }
 }
