--- a/Resources/Node.js/bower.json
+++ b/Resources/Node.js/bower.json
@@ -1,12 +1,17 @@
 {
-    "name": "starter-node-angular",
-    "version": "1.0.0",
-    "dependencies": {
-        "bootstrap": "latest",
-        "font-awesome": "latest",
-        "animate.css": "latest",
-        "angular": "latest",
-        "angular-route": "latest",
-		"angular-ui-layout":"latest"
-    }
+  "name": "starter-node-angular",
+  "version": "1.0.0",
+  "dependencies": {
+    "bootstrap": "latest",
+    "font-awesome": "latest",
+    "animate.css": "latest",
+    "angular": "latest",
+    "angular-route": "latest",
+    "angular-ui-layout": "latest",
+    "angular-material": "latest",
+    "angular-messages": "latest"
+  },
+  "resolutions": {
+    "angular": "1.4.3"
+  }
 }
