--- a/Resources/Node.js/package.json
+++ b/Resources/Node.js/package.json
@@ -14,6 +14,8 @@
     "jade": "~1.9.2",
     "mongoskin": "~1.4",
     "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "jsonwebtoken ":"",
+    "mongoose":""
   }
 }
