--- a/Resources/Node.js/bower.json
+++ b/Resources/Node.js/bower.json
@@ -9,7 +9,7 @@
     "angular-route": "1.4.6",
     "angular-ui-layout": "1.3.0",
     "angular-material": "0.11.1",
-    "angular-messages": "1.4.6"
+    "angular-messages": "1.4.6",
 	"angular-sanitize":"1.4.7"
   },
   "resolutions": {
