--- a/Resources/Node.js/bower.json
+++ b/Resources/Node.js/bower.json
@@ -10,7 +10,8 @@
     "angular-ui-layout": "1.3.0",
     "angular-material": "0.11.1",
     "angular-messages": "1.4.6",
-	"angular-sanitize":"1.4.7"
+    "angular-sanitize": "1.4.7",
+    "async": "~1.5.0"
   },
   "resolutions": {
     "angular": "1.4.6"
