--- a/Resources/Node.js/bower.json
+++ b/Resources/Node.js/bower.json
@@ -11,6 +11,7 @@
     "angular-material": "0.11.1",
     "angular-messages": "1.4.6",
     "angular-sanitize": "1.4.7",
+    "angular-animate": "1.4.7",
     "async": "~1.5.0"
   },
   "resolutions": {
